--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* polices du site */
 body {
-	font-family: 'Raleway', Arial, sans-serif;
+    font-family: 'Raleway', Arial, sans-serif;
+    margin-bottom: 150px;
 }
 
 header {
@@ -22,7 +23,7 @@ margin-left: 0;
 
 nav {
     flex-basis: 90%;
-    
+
     /* comment justifier à droite les éléments ?*/
     justify-self: right;
 }
@@ -67,4 +68,31 @@ h2 {
 /* taille du corps de texte */
 p {
 	font-size: 0.7em;
+}
+
+/* proprietes du footer */
+footer {
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 150px;
+    padding: 30px 30px 40px;
+    position: fixed;
+}
+
+#footer_container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer_children {
+    flex-basis: 30%;
+
+    /* ne fonctionne pas */
+    min-width: 200px;
+}
+
+#footer_container ul {
+	text-align: left;
+	margin: 0;
+    padding: 0;
 }
