correctifs style activites

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ nav a:hover, a:active {
     width: 35px;
     height: 35px;
     text-align: center;
-    /* ne foncrtionne pas */
+    /* ne fonctionne pas */
     vertical-align: middle;
     margin-right: 5px;
 }
