--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ nav a:hover, a:active {
 #populaire_titre {
     width: 320px;
     display: flex;
-    /* Comment répartir les 2 élements sur chaque côté avec un espace entre eux ? */
+    /* Comment répartir les 2 élements (titre, icone) sur chaque côté avec un espace entre eux ? */
     align-content: space-between;
 }
 
