--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ nav a:hover, a:active {
 }
 
 #bouton:active {
-    background-color: black;
+    background-color: grey;
 }
 
 #bouton:hover {
@@ -135,53 +135,57 @@ nav a:hover, a:active {
 
 #filtres {
     display: flex;
-    align-items: center;
-    padding-right: 15px;
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+
+#filtres_titre {
+    padding-right: 10px;
+    line-height: 10px;
+}
+#filtres p {
     vertical-align: middle;
+    padding-right: 10px;
 }
 
 .selection {
-    display: flex;
-    margin: 15px;
+    display:flex;
+    align-items: center;
+    margin-right: 15px;
+    padding-right: 15px;
+    border: 1px lightgrey solid;
+    border-radius: 50px;
+    font-weight: bold;
+    height: 40px;
+}
+
+.selection:hover, :active {
+    background-color: #deebff;
+    box-shadow: 5 5 lightgrey;
 }
 
 .selection i {
-    font-size: smaller;
+    font-size: xx-small;
     color: #0065fc;
     background-color: #deebff;
+    border: 2px #deebff solid;
     border-radius: 50%;
-    width: 35px;
-    height: 35px;
+    width: 40px;
     text-align: center;
     vertical-align: middle;
     margin-right: 7px;
-    line-height: 35px;
+    line-height: 40px;    
 }
 
-.selection h3 {
-    border: thin #f2f2f2 solid;
-    border-radius: 50px;
-    padding-right: 15px;
-    vertical-align: middle;
-}
-
-.selection i:hover {
-    /* pertinence charte graphique ?
-    background-color: lightgreen;
-    color: white;
-    */
+.selection i:hover, :active {
     background-color: #0065fc;
     color: #deebff;
 }
 
 .fa-info-circle {
     color: #0065fc;
-    font-size: x-small;
+    font-size: small;
     padding-right: 5px;
-}
-
-#resultat p {
-    margin-right: 15px;
 }
 
 /* ---------- section_2_hebergements ---------- */
@@ -248,7 +252,7 @@ nav a:hover, a:active {
 
 .fa-chart-line {
     float: right;
-    padding-right: 25px;    
+    padding-right:25px;    
 }
 
 #populaires_container {
@@ -298,6 +302,10 @@ nav a:hover, a:active {
 }
 
 /* ---------- section_3_activites ---------- */
+#resultats_activites {
+    margin: 50px;
+}
+
 #activites_container {
     display: flex;
     justify-content: space-between;
@@ -313,6 +321,10 @@ nav a:hover, a:active {
     padding-bottom: 5px;
 }
 
+.suggestion h2 {
+    margin-left: 10px;
+}
+
 .suggestion:hover {
     box-shadow: 0 0 10px grey;
 }
@@ -322,15 +334,9 @@ nav a:hover, a:active {
     object-fit: cover;
 }
 
-.suggestion h2 {
-    margin-left: 10px;
-}
-
 /* ---------- footer ---------- */
 footer {
     background-color: #f2f2f2;
-    width: 100%;
-    height: 150px;
     padding: 30px 30px 40px;
     margin-top: 50px;
     /*position fixe ? */
@@ -338,6 +344,7 @@ footer {
 
 #footer_container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
