--- a/css/style.css
+++ b/css/style.css
@@ -2,44 +2,38 @@
 /* polices du site */
 body {
     font-family: 'Raleway', Arial, sans-serif;
-    margin-top: 0;
+    margin: 0;
 }
 
 /* aspect des liens par defaut */
 a {
 	text-decoration: none;
 	color: black;
-	font-size: 0.7em;
+	font-size: 1em;
 }
 
 /* taille des titres */
 h1 {
-	font-size: 0.9em;
+	font-size: 1.2em;
 }
 
 h2 {
-	font-size: 0.8em;
+	font-size: 1.1em;
 }
 
 h3 {
-    font-size: 0.7em;
+    font-size: 1em;
 }
 
 /* taille du corps de texte */
 p {
-	font-size: 0.7em;
-}
-
-/* ---------- main ---------- */
-main {
-    width: 90%;
-    margin: auto;
+	font-size: 1em;
 }
 
 /* ---------- header ---------- */
 header {
     width: 90%;
-    margin: auto;
+    margin: 30px auto;
 }
 
 #navbar {
@@ -73,12 +67,18 @@ nav li {
 }
 
 nav a {
-	padding: 20px 30px;
+	padding: 30px 30px;
 }
 
 nav a:hover, a:active {
-  	border-top: solid #0065fc;
+  	border-top: 3px solid #0065fc;
   	color: #0065fc;
+}
+
+/* ---------- main ---------- */
+main {
+    width: 90%;
+    margin: auto;
 }
 
 /* ---------- section_1_recherche ----------*/
@@ -92,13 +92,14 @@ nav a:hover, a:active {
 .fa-map-marker-alt {
     background-color: #f2f2f2;
     padding: 15px;
-    font-size: x-small;
+    font-size: relative-size;
     border: thin #f2f2f2 solid;
     border-radius: 15px 0 0 15px;
 }
 
 #champ {
     border-color: #f2f2f2;
+    font-weight: bold;
 }
 
 [type="search"] {
@@ -128,15 +129,10 @@ nav a:hover, a:active {
     box-shadow: 0 0 5px grey;
 }
 
-#resultat {
-    display: flex;
-    align-items: center;
-}
-
 #filtres {
     display: flex;
-    margin-top: 50px;
-    margin-bottom: 25px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 #filtres_titre {
@@ -154,21 +150,20 @@ nav a:hover, a:active {
     margin-right: 15px;
     padding-right: 15px;
     border: 1px lightgrey solid;
-    border-radius: 50px;
+    border-radius: 70px;
     font-weight: bold;
     height: 40px;
 }
 
 .selection:hover, :active {
-    background-color: #deebff;
-    box-shadow: 0 0 5px grey;
+    color: #0065fc;
 }
 
 .selection i {
-    font-size: xx-small;
+    font-size: medium;
     color: #0065fc;
     background-color: #deebff;
-    border: 2px #deebff solid;
+    border: 1px #deebff solid;
     border-radius: 50%;
     width: 40px;
     text-align: center;
@@ -179,12 +174,19 @@ nav a:hover, a:active {
 
 .selection i:hover, :active {
     background-color: #0065fc;
-    color: #deebff;
+    color: white;
+    border: 1px #0065fc solid;
+}
+
+#resultat {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .fa-info-circle {
     color: #0065fc;
-    font-size: small;
+    font-size: large;
     padding-right: 5px;
 }
 
@@ -235,9 +237,19 @@ nav a:hover, a:active {
 }
 
 .descriptif_h {
-    line-height: 0.5;
+    margin-top: 0;
     padding: 0 0 15px 5px;
+    line-height: 0.2;
 }
+
+.descriptif_h h2 {
+    font-size: 0.9em;
+}
+
+.descriptif_h p {
+    font-size: 0.9em;
+}
+
 #resultats_populaires {
     width: 25%;
     background-color: #f2f2f2;
@@ -290,6 +302,14 @@ nav a:hover, a:active {
     padding-left: 10px;
 }
 
+.descriptif_p h2 {
+    font-size: 0.9em;
+}
+
+.descriptif_p p {
+    font-size: 0.9em;
+}
+
 .populaire_icons {
     position: absolute;
     top: 90px;
@@ -323,6 +343,7 @@ nav a:hover, a:active {
 
 .suggestion h2 {
     margin-left: 10px;
+    font-size: 0.9em;
 }
 
 .suggestion:hover {
@@ -361,4 +382,5 @@ footer {
 	text-align: left;
 	margin: 0;
     padding: 0;
+    line-height: 1.6;
 }
